-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10.0 Beta4, 6.11
-
ae7cbfbea (dev), cb3a834c1 (6.9), b91613678 (6.10), 16a1c9773 (6.10.0)
-
DaVinci 124
qt3d fails on documentation-warnings in nightly health check:
agent:2025/09/07 22:43:18 build.go:413: qt.qdoc: Cannot find index directory: "/home/qt/work/qt/qt3d/doc" agent:2025/09/07 22:44:36 build.go:413: [17/17] cd /home/qt/work/qt/qt3d/src/core && /opt/cmake-3.30.5/bin/cmake -E env QT_INSTALL_DOCS="/home/qt/work/install/doc" QT_VERSION=6.11.0 QT_VER=6.11 QT_VERSION_TAG=6110 BUILDDIR=/home/qt/work/qt/qt3d/src/core /home/qt/work/qt/qt3d/doc_tools_build/install/bin/qdoc -installdir /doc -outputdir /home/qt/work/qt/qt3d/doc/qt3d /home/qt/work/qt/qt3d/src/core/doc/qt3d.qdocconf -generate -indexdir /home/qt/work/qt/qt3d/doc @/home/qt/work/qt/qt3d/src/core/.doc/RelWithDebInfo/includes.txt agent:2025/09/07 22:44:36 build.go:413: FAILED: src/core/CMakeFiles/generate_top_level_docs_3DCore /home/qt/work/qt/qt3d/src/core/CMakeFiles/generate_top_level_docs_3DCore agent:2025/09/07 22:44:36 build.go:413: cd /home/qt/work/qt/qt3d/src/core && /opt/cmake-3.30.5/bin/cmake -E env QT_INSTALL_DOCS="/home/qt/work/install/doc" QT_VERSION=6.11.0 QT_VER=6.11 QT_VERSION_TAG=6110 BUILDDIR=/home/qt/work/qt/qt3d/src/core /home/qt/work/qt/qt3d/doc_tools_build/install/bin/qdoc -installdir /doc -outputdir /home/qt/work/qt/qt3d/doc/qt3d /home/qt/work/qt/qt3d/src/core/doc/qt3d.qdocconf -generate -indexdir /home/qt/work/qt/qt3d/doc @/home/qt/work/qt/qt3d/src/core/.doc/RelWithDebInfo/includes.txt agent:2025/09/07 22:44:36 build.go:413: qdoc: 'Qt3D': Unknown base 'QtObject' for QML type 'MorphTarget' agent:2025/09/07 22:44:36 build.go:413: qdoc: 'Qt3D': Unknown base 'PropertyAnimation' for QML type 'QuaternionAnimation' agent:2025/09/07 22:44:36 build.go:413: qdoc: 'Qt3D': Unknown base 'Component' for QML type 'SceneLoader' agent:2025/09/07 22:44:36 build.go:413: qdoc: 'Qt3D': Unknown base 'QtObject' for QML type 'GraphicsApiFilter' agent:2025/09/07 22:44:36 build.go:413: qdoc: 'Qt3D': Unknown base 'QtObject' for QML type 'StencilOperationArguments' agent:2025/09/07 22:44:36 build.go:413: qdoc: 'Qt3D': Unknown base 'QtObject' for QML type 'StencilTestArguments' agent:2025/09/07 22:44:36 build.go:413: /home/qt/work/qt/qt3d/src/extras/defaults/qabstractcameracontroller.cpp:228: (qdoc) warning: Undocumented parameter 'state' in Qt3DExtras::QAbstractCameraController::moveCamera() agent:2025/09/07 22:44:36 build.go:413: /home/qt/work/qt/qt3d/src/extras/defaults/qabstractcameracontroller.cpp:228: (qdoc) warning: Undocumented parameter 'dt' in Qt3DExtras::QAbstractCameraController::moveCamera() agent:2025/09/07 22:44:36 build.go:413: QDoc: error: Documentation warnings (2) exceeded the limit (0) for 'Qt3D'.
Full log: https://testresults.qt.io/coin/api/log/qt/qt3d/8584d4c1e5da4e89e206d3fb72dfae7eb5d7a508/LinuxUbuntu_22_04x86_64LinuxUbuntu_22_04x86_64GCCqtci-linux-Ubuntu-22.04-x86_64-51-d8ee95DoNotRunTestsButCreateTestWorkItem_DocsGenerationV2_Sccache_TestDocs_TestOnly/92ab3d8570b16ab9b527fb12b646b3ce2114b756/forceRun/test_1757284071/log.txt.gz
Integration: https://testresults.qt.io/coin/integration/qt/qt5/tasks/nightly1757281502
| For Gerrit Dashboard: QTBUG-139978 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 674193,4 | Doc: Document parameters in pure virtual function | dev | qt/qt3d | Status: MERGED | +2 | 0 |
| 674236,2 | Doc: Document parameters in pure virtual function | 6.10 | qt/qt3d | Status: MERGED | +2 | 0 |
| 674247,3 | Doc: Document parameters in pure virtual function | 6.9 | qt/qt3d | Status: MERGED | +2 | 0 |
| 674266,2 | Doc: Document parameters in pure virtual function | 6.10.0 | qt/qt3d | Status: MERGED | +2 | 0 |