Doc: Document parameters in pure virtual function

Pick-to: 6.10.0
Fixes: QTBUG-139978
Change-Id: Ie636cba5b932ad35da18dfdab2feeaab96579621
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit ae7cbfbea6c91e7df6b4c398301a52a969fd0667)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>